# soulmateai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: mental_health.txt
static/: index.html  script.js  style.css
