[tool.poetry]
name = "soulmateai"
version = "0.1.0"
description = ""
authors = ["Shian-Yow Wu <shianyow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.1.4"
chromadb = ">=0.4.22"
python-dotenv = ">=1.0.0"
openai = ">=1.6.1"
tiktoken = ">=0.5.2"
fastapi = ">=0.109.0"
uvicorn = ">=0.25.0"
python-multipart = ">=0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
